# sdl-template

./: CMakeLists.txt  LICENSE  Main  Makefile  TODO.md  _README.md
src/: main.cpp
